--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "horio-ai-fe",
+  "name": "horio-ai-web",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -16,6 +16,10 @@
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@vitejs/plugin-react": "^3.1.0",
+    "autoprefixer": "^10.4.13",
+    "cssnano": "^5.1.14",
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.2.4",
     "typescript": "^4.9.3",
     "vite": "^4.1.0"
   }
